feat:adiciona metodo de autenticação com token
