# application/app/Http/Controllers/Auth/AuthController.php
@@ -1,0 +1,59 @@
+<?php
+
+namespace App\Http\Controllers\Auth;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\LoginRequestDto;
+use App\Services\AuthService;
+use Illuminate\Http\Request;
+
+class AuthController extends Controller
+{
+    private $authService;
+
+    public function __construct(AuthService $auth) {
+        $this->authService = $auth;
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/v1/dewtech/login",
+     *     operationId="login",
+     *     tags={"Auth"},
+     *     summary="Autenticação de usuário",
+     *     description="Login para obter o token de acesso",
+     *
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(property="email", type="string", description="User email"),
+     *                 @OA\Property(property="password", type="string", description="User password"),
+     *                 example={"email": "user@example.com", "password": "password1234"}
+     *             )
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="Autenticado com sucesso",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="access_token", type="string", example="abcd1234"),
+     *             @OA\Property(property="token_type", type="string", example="Bearer"),
+     *             @OA\Property(property="expires_at", type="string", example="2023-08-12 12:34:56")
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=401,
+     *         description="Invalid credentials",
+     *     ),
+     * )
+     */
+    public function login(LoginRequestDto $request)
+    {
+        return $this->authService->authenticate($request);
+    }
+}
